--- a/vue-project/.gitignore
+++ b/vue-project/.gitignore
@@ -5,7 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
+# Editor directories and files 1234
 .idea
 .vscode
 *.suo
